# supercollider

./: .travis.yml  README_LINUX.md
.travis/: package-linux.sh
HelpSource/: Search.html  scdoc.css  scdoc.js
HelpSource/Classes/: DynKlang.schelp  EZSlider.schelp  Env.schelp  Fdef.schelp  FreqShift.schelp  GrainSin.schelp  InTrig.schelp  MIDIIn.schelp  Ndef.schelp  Node.schelp  NodeProxy.schelp  OffsetOut.schelp  Onsets.schelp  PanAz.schelp  Pbindef.schelp  PdurStutter.schelp  Pexprand.schelp  Pfindur.schelp  Pfset.schelp  Pfunc.schelp  Pfuncn.schelp  PingPong.schelp  PlazyEnvirN.schelp  Ppatmod.schelp  Pshuf.schelp  Pwalk.schelp  SoundFile.schelp  Tdef.schelp
HelpSource/Reference/: ServerPluginAPI.schelp  Syntax-Shortcuts.schelp
SCClassLibrary/Common/Audio/: CheckBadValues.sc
SCClassLibrary/SCDoc/: SCDocRenderer.sc
SCClassLibrary/scide_scqt/: ScIDE.sc
debian/: changelog  control  copyright  rules  supercollider-emacs.emacsen-install  supercollider-vim.docs  supercollider-vim.install  watch
editors/sc-ide/core/: doc_manager.cpp  doc_manager.hpp  main.cpp  main.hpp  sc_lexer.cpp
editors/sc-ide/widgets/: documents_dialog.cpp  help_browser.cpp  help_browser.hpp  main_window.cpp  main_window.hpp
package/: .gitignore  create_package.sh  package
server/plugins/: CMakeLists.txt  DelayUGens.cpp
server/plugins/BufferUGens/: BufRd.cpp  BufRd.hpp  BufferUGens.cpp  BufferUGens.hpp  PlayBuf.cpp  PlayBuf.hpp
testsuite/classlibrary/: UGenRegressionTest.sc
testsuite/server/: CMakeLists.txt
testsuite/server/plugins/: CMakeLists.txt  plugins_test.cpp
(+6 files in other folders)
